--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,13 @@
 {
+  "type": "module",
   "name": "backend",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
