Add Auth Middleware

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 JWT_SECRET = "Hello",
-MONGO_URI = "Add your url here"
+MONGO_URI = "mongodb+srv://Shyam:Shyam_1225@cluster0.by8z1jv.mongodb.net/Resume-Builder"
